# OculusSpatialAnchor

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/tech/glasgowneuro/oculusecg/: ExampleInstrumentedTest.java
app/src/androidTest/java/tech/glasgowneuro/oculusspatialanchor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SimpleXrInput.cpp  SimpleXrInput.h  SpatialAnchorGl.cpp  SpatialAnchorXr.cpp
app/src/main/java/tech/glasgowneuro/oculusecg/: ANativeActivity.java
app/src/main/java/tech/glasgowneuro/oculusspatialanchor/: ANativeActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/tech/glasgowneuro/oculusecg/: ExampleUnitTest.java
app/src/test/java/tech/glasgowneuro/oculusspatialanchor/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
